# komoot-waypoint-fixer-telegram-bot

./: .gitignore  Cargo.toml  Cross.toml  README.md  komoot_waypoint_fixer_telegram_bot.service
src/: app_state.rs  main.rs  waypoint.rs
