[package]
name = "komoot-to-wahoo-waypoint-fixer"
version = "0.1.0"
edition = "2024"

[dependencies]
gpx = "0.10.0"
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.52.3", features = ["full"] }
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
