[package]
name = "komoot_waypoint_fixer_telegram_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
gpx = "0.10.0"
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.52.3", features = ["full"] }
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
geo = "0.33.1"
geo-types = "0.7.19"
